--- a/Charge/Charge.vcxproj
+++ b/Charge/Charge.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Actor.h" />
     <ClInclude Include="ClientGame.h" />
     <ClInclude Include="ClientNetwork.h" />
+    <ClInclude Include="Cube.h" />
     <ClInclude Include="Globals.h" />
     <ClInclude Include="NetworkData.h" />
     <ClInclude Include="main.h" />
@@ -176,6 +177,7 @@
     <ClCompile Include="Actor.cpp" />
     <ClCompile Include="ClientGame.cpp" />
     <ClCompile Include="ClientNetwork.cpp" />
+    <ClCompile Include="Cube.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Materials.cpp" />
     <ClCompile Include="NetworkService.cpp" />
